# nova

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  README.md  Taskfile.template.yml  Taskfile.yml  compose.yaml  dev.sh  mise.toml  mprocs.yaml  nova.code-workspace  setup.sh
.agents/skills/advanced-alchemy/: SKILL.md
.agents/skills/litestar/: SKILL.md
.codex/skills/vercel-react-best-practices/: AGENTS.md  SKILL.md
.codex/skills/web-design-guidelines/: SKILL.md
.cursor/rules/: python.mdc
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  python.instructions.md  swiftui.instructions.md  typescript.instructions.md  vercel-react-best-practices.instructions.md
.github/prompts/: backend-entity.prompt.md  frontend-feature.prompt.md  graphql-contract.prompt.md  install-backend-dependency.prompt.md  install-frontend-dependency.prompt.md  pr-creation.prompt.md  prune-no-graphql.prompt.md  prune-no-ios.prompt.md  prune-no-rest.prompt.md  prune-rest-only.prompt.md  remove-backend-dependency.prompt.md  remove-graphql.prompt.md  remove-ios.prompt.md  taskfile-workflow.prompt.md  update-backend-dependency.prompt.md  update-frontend-dependency.prompt.md  update-mise-dependencies.prompt.md  update-pnpm.prompt.md
.github/workflows/: README.md  ci.yml  pr-validation.yml
.nova/: template-prune-state.toml
.rules/: backend-async-tasks.md  backend-boundary.md  backend-entity.md  frontend-boundary.md  graphql-contract.md  guardrails.md  python.md  typescript.md  workflow-taskfile.md
backend/: .env.example  .gitignore  AGENTS.md  README.md  Taskfile.yml  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2025-12-19_initial_user_model_71cfbdad2d2d.py  2025-12-21_initial_user_model_5c9d7140c62b.py
backend/src/backend/: __init__.py  admin_auth.py  app_factory.py  application.py  celery_app.py  health.py  sqladmin_app.py
backend/src/backend/admin/: __init__.py  app.py  auth.py  views.py
backend/src/backend/admin/views/: __init__.py  user.py
backend/src/backend/api/: pagination.py
backend/src/backend/apps/: mixins.py  models.py
backend/src/backend/apps/users/: auth.py  controllers.py  models.py  pagination.py  rest.py  schemas.py  services.py  tasks.py
backend/src/backend/apps/users/graphql/: __init__.py  errors.py  inputs.py  mutations.py  queries.py  types.py
backend/src/backend/auth/: __init__.py  jwt.py
backend/src/backend/config/: alchemy.py  base.py
backend/src/backend/graphql/: context.py  controller.py  permissions.py  schema.py
backend/src/backend/middleware/: rate_limit.py
backend/src/backend/scripts/: create_admin_user.py
backend/src/backend/security/: passwords.py
backend/tests/: conftest.py  test_admin_smoke.py  test_security.py  test_user.py
backend/tests/apps/users/: test_tasks.py
backend/tests/apps/users/graphql/: test_mutations.py  test_pagination.py  test_queries.py
backend/tests/apps/users/rest/: conftest.py  test_endpoints.py
backend/tests/auth/: test_jwt.py
backend/tests/graphql/: test_schema.py
backend/tests/middleware/: test_rate_limit.py
db/: init.sql
docs/: deployment.md  rules.md
frontend/: .env.local.example  .gitignore  AGENTS.md  README.md  Taskfile.yml  biome.json  codegen.schema.json  codegen.yml  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.storybook.workspace.ts
frontend/.storybook/: main.ts  preview.ts  vitest.setup.ts
frontend/__tests__/: setup.tsx
frontend/e2e/: home.spec.ts
frontend/schema/: schema.graphql
ios/: AGENTS.md  README.md
ios/ios/: ContentView.swift  iosApp.swift
ios/ios.xcodeproj/: project.pbxproj
ios/iosTests/: APIClientTests.swift  APIErrorTests.swift  KeychainTokenStoreTests.swift  LoginViewModelTests.swift  MockKeychainClient.swift  MockTokenStore.swift  SessionStoreTests.swift  URLProtocolMock.swift  iosTests.swift
scripts/: generate_python_env.sh  generate_rules.sh
scripts/template-prune/: apply.sh  common.sh  validate.sh
(+200 files in other folders)
