[project]
name = "backend"
version = "0.1.0"
description = "Backend service for the application"
readme = "README.md"
authors = [
    { name = "M", email = "lmiguelvargasf@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "advanced-alchemy[argon2]>=1.8.2",
    "asyncpg>=0.31.0",
    "itsdangerous>=2.2.0",
    "litestar[standard]>=2.19.0",
    "loguru>=0.7.3",
    "msgspec>=0.20.0",
    "pydantic-settings>=2.12.0",
    "starlette-admin>=0.16.0",
    "strawberry-graphql>=0.287.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "rich>=14.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "strawberry-graphql[debug-server]>=0.287.3",
    "ty>=0.0.5",
]

[tool.ruff]
line-length = 88
target-version = "py314"
[tool.ruff.lint]
select = [
    "A", # flake8-builtins: avoid shadowing builtins like id/list
    "ASYNC", # flake8-async: prevent blocking calls in async code
    "B", # flake8-bugbear: common bug patterns and footguns
    "BLE", # flake8-blind-except: avoid bare/overbroad excepts
    "C4", # flake8-comprehensions: clearer comprehensions
    "DTZ", # flake8-datetimez: enforce timezone-aware datetimes
    "E", # pycodestyle errors: basic correctness/style
    "ERA", # eradicate: commented-out code
    "F", # pyflakes: unused/undefined names
    "I", # isort: import ordering
    "N", # pep8-naming: consistent naming conventions
    "PIE", # flake8-pie: misc clarity improvements
    "PT", # flake8-pytest-style: pytest conventions
    "RET", # flake8-return: consistent return behavior
    "RSE", # flake8-raise: better raise patterns
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit: security checks
    "SIM", # flake8-simplify: simplify conditionals
    "T20", # flake8-print: disallow print()
    "TRY", # tryceratops: better try/except patterns
    "UP", # pyupgrade: modernize for Python 3.14
    "W", # pycodestyle warnings
]
ignore = ["E501"]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # pytest uses assert statements for test assertions
    "S105", # hardcoded passwords are acceptable in test fixtures/data
    "S106", # hardcoded passwords are acceptable in test fixtures/data
    "S107", # hardcoded passwords are acceptable in test fixtures/data
]
"migrations/**/*.py" = [
    "N999", # migration filenames include timestamps/slugs by design
]
"**/graphql/**/*.py" = [
    "A002", # `id` is a standard GraphQL field name
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = [
    "migrations/**/*",
]
